--- a/404.html
+++ b/404.html
@@ -87,7 +87,7 @@
 
             <section class="normal" id="section-">
 <div id="page-not-found" class="section level1">
-<h1>Page not found</h1>
+<h1>PAGE NOT FOUND</h1>
 <p>The page you requested cannot be found (perhaps it was moved or renamed).</p>
 <p>You may want to try searching to find the page's new location, or use
 the table of contents to find the page you are looking for.</p>
